--- a/BouncingBall/Kernel.csproj
+++ b/BouncingBall/Kernel.csproj
@@ -43,11 +43,14 @@
     <Compile Include="IStaticObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screen.cs" />
+    <Compile Include="ScreenChangingEventArgs.cs" />
     <Compile Include="ScreenManager.cs" />
     <Compile Include="ScreenSizeEventArgs.cs" />
     <Compile Include="SerializationManager.cs" />
     <Compile Include="Simulation.cs" />
     <Compile Include="SimulationManager.cs" />
+    <Compile Include="SimulationScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
