--- a/BouncingBall/Kernel.csproj
+++ b/BouncingBall/Kernel.csproj
@@ -36,11 +36,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DynamicBall.cs" />
+    <Compile Include="Forms\ObjectExplorer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ObjectExplorer.Designer.cs">
+      <DependentUpon>ObjectExplorer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="IDrawableObject.cs" />
     <Compile Include="IDynamicObject.cs" />
     <Compile Include="IObject.cs" />
     <Compile Include="IStaticObject.cs" />
+    <Compile Include="MouseManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen.cs" />
@@ -62,6 +70,9 @@
     <Reference Include="Lidgren.Network">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Lidgren.Network.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="Tao.Sdl">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Tao.Sdl.dll</HintPath>
     </Reference>
@@ -80,6 +91,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Simulations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Forms\ObjectExplorer.resx">
+      <DependentUpon>ObjectExplorer.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
