--- a/BouncingBall/Kernel.csproj
+++ b/BouncingBall/Kernel.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{C2238748-95EC-40BB-AEB0-DD8BEDA918D3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BouncingBall</RootNamespace>
+    <RootNamespace>Engine</RootNamespace>
     <AssemblyName>BouncingBall</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,7 +35,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="DynamicBall.cs" />
+    <Compile Include="Objects\DynamicBall.cs" />
     <Compile Include="Forms\ObjectExplorer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -44,21 +44,24 @@
     </Compile>
     <Compile Include="Game1.cs" />
     <Compile Include="GameManager.cs" />
-    <Compile Include="IDrawableObject.cs" />
-    <Compile Include="IDynamicObject.cs" />
-    <Compile Include="IObject.cs" />
-    <Compile Include="IStaticObject.cs" />
-    <Compile Include="MouseManager.cs" />
+    <Compile Include="Objects\IDrawableObject.cs" />
+    <Compile Include="Objects\IDynamicObject.cs" />
+    <Compile Include="Input\InputManager.cs" />
+    <Compile Include="Objects\IObject.cs" />
+    <Compile Include="Objects\IStaticObject.cs" />
+    <Compile Include="Input\KeyboardEventArgs.cs" />
+    <Compile Include="Input\MouseEventArgs.cs" />
+    <Compile Include="Input\MouseManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screen.cs" />
-    <Compile Include="ScreenChangingEventArgs.cs" />
-    <Compile Include="ScreenManager.cs" />
-    <Compile Include="ScreenSizeEventArgs.cs" />
+    <Compile Include="Screens\Screen.cs" />
+    <Compile Include="Screens\ScreenChangingEventArgs.cs" />
+    <Compile Include="Screens\ScreenManager.cs" />
+    <Compile Include="Screens\ScreenSizeEventArgs.cs" />
     <Compile Include="SerializationManager.cs" />
-    <Compile Include="Simulation.cs" />
-    <Compile Include="SimulationManager.cs" />
-    <Compile Include="SimulationScreen.cs" />
+    <Compile Include="Simulations\Simulation.cs" />
+    <Compile Include="Simulations\SimulationManager.cs" />
+    <Compile Include="Screens\SimulationScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
